--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Mi primera Pgw</title>
+    <title>Mi primera Chamba</title>
 </head>
 <body>
     <h1>Lenguaje de Programación y Soporte de Sistemas</h1>
